<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notificaciones</string>
    <string name="action_settings">Configuración</string>
    <string name="titulo_notificacion">UCA Ingeniería</string>
    <string name="gcm_error_enviar">Error al enviar un mensaje GCM: </string>
    <string name="gcm_mensaje_borrado">Mensaje borrado en el servidor GCM: </string>
    <string name="title_activity_settings">Configuración</string>
    <string name="hello_world">Hello world!</string>
    <string name="config_datos_personales">Datos personales</string>
    <string name="config_nombre_alumno">Nombre del Alumno</string>
    <string name="config_apellido_alumno">Apellido del Alumno</string>
    <string name="config_carrera">Carrera</string>
    <string name="config_numero_registro">Número de registro</string>
    <string name="config_email">Email</string>
    <string name="config_ok_button">Confirmar y subir datos al servidor</string>

</resources>
